<resources>
    <string name="app_name">GitHub Search with Settings</string>

    <string name="search_hint">Search GitHub…</string>
    <string name="search">Search</string>

    <string name="search_error">Error fetching search results: %1$s</string>

    <string name="action_share">Share</string>
    <string name="share_text">%1$s on GitHub: %2$s</string>

    <string name="action_view_on_web">View this repo on GitHub</string>
    <string name="action_view_on_web_error">There\'s no app on this device that can open a web page.  Try installing a web browser.</string>

    <string name="action_settings">Settings</string>

    <string name="pref_category_search">Search settings</string>

    <string name="pref_sort_title">Sort by</string>
    <string name="pref_user_title">Search only for repos by this GitHub user</string>
    <string name="pref_language_title">Search by programming language</string>
    <string name="pref_first_issues_title">Minimum number of good first issues</string>

    <string name="pref_sort_key" translatable="false">sort</string>
    <string name="pref_user_key" translatable="false">user</string>
    <string name="pref_language_key" translatable="false">language</string>
    <string name="pref_first_issues_key" translatable="false">first_issues</string>

    <string name="pref_sort_entry_stars">Stars</string>
    <string name="pref_sort_entry_forks">Forks</string>
    <string name="pref_sort_entry_updated">Most-recently updated</string>

    <string name="pref_sort_val_stars" translatable="false">stars</string>
    <string name="pref_sort_val_forks" translatable="false">forks</string>
    <string name="pref_sort_val_updated" translatable="false">updated</string>

    <string name="pref_sort_default">@string/pref_sort_val_stars</string>

    <string name="pref_language_entry_c">C</string>
    <string name="pref_language_entry_cpp">C++</string>
    <string name="pref_language_entry_java">Java</string>
    <string name="pref_language_entry_kotlin">Kotlin</string>
    <string name="pref_language_entry_javascript">Javascript</string>
    <string name="pref_language_entry_rust">Rust</string>
    <string name="pref_language_entry_python">Python</string>

    <string name="pref_language_val_c" translatable="false">c</string>
    <string name="pref_language_val_cpp" translatable="false">c++</string>
    <string name="pref_language_val_java" translatable="false">java</string>
    <string name="pref_language_val_kotlin" translatable="false">kotlin</string>
    <string name="pref_language_val_javascript" translatable="false">javascript</string>
    <string name="pref_language_val_rust" translatable="false">rust</string>
    <string name="pref_language_val_python" translatable="false">python</string>
</resources>